# computer-vision

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/Modules/: FindDeckLinkSDK.cmake  FindExiv2.cmake
modules/core/include/: frame.h  object.h  pixel_object.h  target.h
modules/core/src/: frame.cpp  object.cpp  pixel_object.cpp
modules/imgimport/: CMakeLists.txt  CMakeLists.txt~
modules/imgimport/include/: exifgenerator.h  imgimport.h  vidimport.h
modules/imgimport/src/: DeckLinkCapture.cpp  DeckLinkOpenCv.cpp  exifgenerator.cpp  imgimport.cpp  metadata_input.cpp  metadata_reader.cpp  vidimport.cpp
modules/imgimport/test/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main.cpp~  test.cpp
modules/targetanalysis/: CMakeLists.txt
modules/targetanalysis/include/: pixel_object_list.h  target_analyzer.h  target_loader.h
modules/targetanalysis/src/: pixel_object_list.cpp  target_analyzer.cpp  target_loader.cpp
modules/targetanalysis/test/: CMakeLists.txt  gps_point_test.cpp  test.cpp  unique_po_test.cpp
modules/targetanalysis/test/json/: sample.json  sample.json.orig
modules/targetid/test/: test.cpp
testdata/: flight_data 2016-05-01 13_17_33.414272.csv
